Fixed flex properties on hero section by sectioni- -ng hero text and image. Added styles on all .item  flex boxes, and add flex wrapping on cat profiles  section in order to make it more responsive.

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,13 +41,21 @@ a{
     justify-content: space-between;
 }
 
+.item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 52px;
+    padding: 48px;   
+}
+
 .hero{
     display: flex;
-    justify-content: space-around;
     align-items: center;
     background-color: #1F2937;
     flex-wrap: wrap;
-    padding: 48px;
+    max-width: 500px;
+    gap: 16px;
 }
 
 .hero-text{
@@ -61,34 +69,26 @@ a{
     color: #E5E7EB;
 }
 
-.one{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
+.item.one{
+    background-color: #1F2937;
 }
 
 .hero-img{
-    width: 400px;
-    height: 216px;
+    max-width: 400px;
 }
 
 .hero-img img{
-    width: inherit;
-    height: inherit;
+    width: 400px;
+    height: 300px;
+    border-radius: 12px;
+    border: 2px solid black;
 }
 
-.item{
-    display: flex;
-}
 
-.two{
+.two .content .content-desc{
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 32px;
-}
-
-.two p{
+    flex-flow: row wrap;
     text-align: center;
     color:#1F2937;
 }
@@ -101,20 +101,25 @@ a{
     padding: 16px;
 }
 
-.content img{
-    width: 200px;
-    height:200px;
-    border-radius: 12px;
-    border: 2px solid black;
-    margin: 0 32px;
+.item.two{
+    flex-wrap: wrap;
 }
 
-.three{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.content{
+    max-width: 200px;
+}
+
+.content img{
+    width: 200px;
+    height:150px;
+    border-radius: 12px;
+    border: 2px solid black;
+    align-self: center;
+    flex-shrink: 0; 
+}
+
+.item.three{
     background-color: #E5E7EB;
-    padding: 48px;
 }
 
 .quote-sec{
@@ -130,12 +135,58 @@ a{
 }
 
 .quote-sec .from{
+    max-width: 90%;
     text-align: right;
     font-size: 18px;
+}
+
+.modal{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 48px;
+    background-color: #3882F6;
+    border: 1px solid #1F2937;
+    border-radius: 12px;
+    gap: 32px;
+}
+
+.modal-text, .sign-up, .footer{
+    font-size: 18px;
+    color:#E5E7EB;
+}
+
+.four{
+    padding: 64px;
+}
+
+.opener{
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.sign-up{
+    font-weight: 900;
+    padding: 16px;
+    border-radius: 8px;
+    border: 2px solid #e5e7eb;
+    background-color: #3882F6;
+}
+
+.sign-up:hover{
+    cursor: pointer;
+    background-color: rgb(229, 231, 235, 0.1);
+}
+
+.sign-up:active{
+    background-color: #E5E7EB;
+    color: #3882F6;
 }
 
 .footer{
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 32px;
+    background-color: #1F2937;
 }
